--- a/package.json
+++ b/package.json
@@ -10,28 +10,45 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-slider": "^1.3.2",
+    "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@svgr/cli": "^8.1.0",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/vite": "^4.0.7",
     "@vitejs/plugin-vue": "^5.2.3",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lightningcss": "^1.29.3",
-    "lucide-react": "^0.503.0",
+    "lucide-react": "^0.511.0",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "recharts": "^2.15.1",
+    "sonner": "^2.0.3",
     "styled-components": "^6.1.17",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.3.0",
+    "zod": "^3.25.28"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@tailwindcss/postcss": "^4.0.7",
+    "@types/date-fns": "^2.6.3",
+    "@types/node": "^22.15.21",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
@@ -45,6 +62,7 @@
     "prettier": "^3.5.1",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.3.3"
